--- a/src/main/resources/disposal_register.fxml
+++ b/src/main/resources/disposal_register.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="300" prefWidth="400" spacing="12" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DisposalRegisterController">
+<VBox alignment="CENTER" prefHeight="300" prefWidth="400" spacing="12" xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="db2025.DB2025Team05_poppop.DB2025Team05_controller.DisposalRegisterController">
 
     <children>
         <Label style="-fx-font-size: 20px;" text="폐기물 처리 이력 입력">
@@ -15,14 +15,8 @@
             <Font size="24.0" />
          </font></Label>
 
-        <Label fx:id="popupIdLabel" text="팝업 ID: ">
-         <font>
-            <Font size="16.0" />
-         </font></Label>
-        <Label fx:id="processorIdLabel" text="처리업체 ID: ">
-         <font>
-            <Font size="16.0" />
-         </font></Label>
+        <ComboBox fx:id="statusComboBox" editable="true" prefWidth="150.0" promptText="팝업스토어 선택" />
+        <ComboBox fx:id="statusComboBox" editable="true" prefWidth="150.0" promptText="처리 업체 선택" />
       <DatePicker fx:id="disposalDate" promptText="처리 일자 선택" />
       <ComboBox fx:id="statusComboBox" editable="true" prefWidth="150.0" promptText="처리 상태 선택" />
 
