--- a/src/main/resources/disposal_stats.fxml
+++ b/src/main/resources/disposal_stats.fxml
@@ -3,17 +3,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" prefHeight="400" prefWidth="600" spacing="15"
-      xmlns="http://javafx.com/javafx/17.0.12"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="db2025.DB2025Team05_poppop.DB2025Team05_controller.DisposalStatsController">
+<VBox alignment="CENTER" prefHeight="400" prefWidth="600" spacing="15" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="db2025.DB2025Team05_poppop.DB2025Team05_controller.DisposalStatsController">
 
     <children>
 
-        <!-- 제목 -->
+
         <Label style="-fx-font-size: 20px;" text="폐기물 처리 통계 조회" />
 
-        <!-- 버튼 3개 배치 -->
+
         <HBox alignment="CENTER" spacing="10">
             <children>
                 <Button fx:id="companyStatsBtn" onAction="#handleCompanyStats" text="회사별 통계" />
@@ -21,14 +18,14 @@
                 <Button fx:id="monthStatsBtn" onAction="#handleMonthStats" text="월별 통계" />
             </children>
         </HBox>
+        <Button fx:id="backButton" mnemonicParsing="false" onAction="#handleBack" text="이전" />
 
-        <!-- 결과 테이블 -->
+
         <TableView fx:id="statsTableView" prefHeight="250" prefWidth="550">
             <columns>
-                <TableColumn fx:id="categoryColumn" prefWidth="287.0" text="구분" />
-                <TableColumn fx:id="totalCountColumn" prefWidth="307.0" text="총 처리 건수" />
-            </columns>
-        </TableView>
+                <TableColumn prefWidth="287.0" text="구분" />
+                <TableColumn prefWidth="307.0" text="총 처리 건수" />
+            </columns></TableView>
 
     </children>
 </VBox>
