--- a/src/main/resources/processor_register.fxml
+++ b/src/main/resources/processor_register.fxml
@@ -17,6 +17,7 @@
         <TextField fx:id="emailField" promptText="이메일 (ID)" />
 
         <Button fx:id="registerButton" onAction="#handleRegister" text="등록" />
+        <Button fx:id="BackButton" mnemonicParsing="false" onAction="#handleBack" text="이전" />
         <Label fx:id="messageLabel" style="-fx-text-fill: red;" text="" />
     </children>
 </VBox>
