--- a/src/main/resources/disposal_stats.fxml
+++ b/src/main/resources/disposal_stats.fxml
@@ -13,17 +13,26 @@
 
         <HBox alignment="CENTER" spacing="10">
             <children>
-                <TextField fx:id="companySearchField" promptText="회사명 입력" />
+                <ComboBox fx:id="companyComboBox" editable="true" prefWidth="150.0" promptText="회사명 선택" />
                 <Button onAction="#handleCompanySearch" text="검색" />
             </children>
         </HBox>
 
         <HBox alignment="CENTER" spacing="10">
             <children>
-                <TextField fx:id="popupSearchField" promptText="팝업스토어명 입력" />
+                <ComboBox fx:id="popupComboBox" editable="true" prefWidth="150.0" promptText="팝업스토어 선택" />
                 <Button onAction="#handlePopupSearch" text="검색" />
             </children>
         </HBox>
+
+        <HBox alignment="CENTER" spacing="10">
+            <children>
+                <Button fx:id="clearCompanyBtn" text="회사 선택 취소" onAction="#handleClearCompany" />
+                <Button fx:id="clearPopupBtn" text="팝업 선택 취소" onAction="#handleClearPopup" />
+            </children>
+        </HBox>
+
+
 
         <Button fx:id="backButton" mnemonicParsing="false" onAction="#handleBack" text="이전" />
 
