--- a/src/main/resources/popup_edit.fxml
+++ b/src/main/resources/popup_edit.fxml
@@ -3,45 +3,52 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="14" style="-fx-padding: 25;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="db2025.DB2025Team05_poppop.DB2025Team05_controller.PopupEditController">
+<AnchorPane prefWidth="960" prefHeight="540"
+            xmlns="http://javafx.com/javafx/17.0.12"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="db2025.DB2025Team05_poppop.DB2025Team05_controller.PopupEditController"
+            stylesheets="@/css/styles.css">
 
+    <children>
+        <VBox alignment="CENTER" spacing="18" layoutX="180" layoutY="60"
+              prefWidth="600" prefHeight="420" styleClass="card">
 
-    <Label style="-fx-font-size: 22px; -fx-padding: 0 0 10 0;" text="팝업스토어 정보 수정" />
+            <!-- 제목 -->
+            <Label text="PopupStore Edit Page" styleClass="label-title" />
 
+            <!-- 그리드 입력 영역 -->
+            <GridPane hgap="10" vgap="10">
+                <columnConstraints>
+                    <ColumnConstraints halignment="RIGHT" minWidth="90" />
+                    <ColumnConstraints halignment="LEFT" minWidth="250" />
+                </columnConstraints>
 
-    <GridPane hgap="10" vgap="10">
-        <columnConstraints>
-            <ColumnConstraints halignment="RIGHT" minWidth="90" />
-            <ColumnConstraints halignment="LEFT" minWidth="250" />
-        </columnConstraints>
+                <Label text="팝업명:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <TextField fx:id="nameField" styleClass="input"
+                           GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-        <Label text="팝업명:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label text="주소:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <TextField fx:id="addressField" styleClass="input"
+                           GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-        <Label text="주소:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <TextField fx:id="addressField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Label text="시작일:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <DatePicker fx:id="startDatePicker" styleClass="input"
+                            GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-        <Label text="시작일:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-        <DatePicker fx:id="startDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <Label text="종료일:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                <DatePicker fx:id="endDatePicker" styleClass="input"
+                            GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            </GridPane>
 
-        <Label text="종료일:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-        <DatePicker fx:id="endDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-        <rowConstraints>
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-        </rowConstraints>
-    </GridPane>
+            <!-- 버튼 영역 -->
+            <HBox alignment="CENTER" spacing="10">
+                <Button fx:id="backButton" text="이전" onAction="#handleBack" styleClass="button-secondary" />
+                <Button fx:id="saveButton" text="저장" onAction="#handleSave" styleClass="button-primary" />
+            </HBox>
 
+            <!-- 메시지 -->
+            <Label fx:id="messageLabel" text="" styleClass="label-error" />
 
-    <HBox alignment="CENTER" spacing="10">
-        <Button fx:id="backButton" onAction="#handleBack" text="이전" />
-        <Button fx:id="saveButton" onAction="#handleSave" text="저장" />
-    </HBox>
-
-
-    <Label fx:id="messageLabel" style="-fx-text-fill: red;" text="" />
-
-</VBox>
+        </VBox>
+    </children>
+</AnchorPane>
