--- a/src/main/resources/processor_register.fxml
+++ b/src/main/resources/processor_register.fxml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" prefHeight="400" prefWidth="400" spacing="12" xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="db2025.DB2025Team05_poppop.DB2025Team05_controller.ProcessorRegisterController">
+<AnchorPane prefWidth="960" prefHeight="540"
+            xmlns="http://javafx.com/javafx/21.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="db2025.DB2025Team05_poppop.DB2025Team05_controller.ProcessorRegisterController"
+            stylesheets="@/css/styles.css">
 
     <children>
-        <Label style="-fx-font-size: 20px;" text="폐기물 처리 업체 등록" />
+        <VBox alignment="CENTER" spacing="16" layoutX="180" layoutY="60"
+              prefWidth="600" prefHeight="420" styleClass="card">
 
-        <TextField fx:id="bizNumberField" promptText="사업자등록번호" />
-        <TextField fx:id="companyNameField" promptText="상호명" />
-        <TextField fx:id="ceoNameField" promptText="대표자명" />
-        <TextField fx:id="ceoPhoneField" promptText="대표자 연락처" />
-        <TextField fx:id="emailField" promptText="이메일 (ID)" />
+            <children>
+                <Label text="Trash Process Company Register" styleClass="label-title" />
 
-        <Button fx:id="registerButton" onAction="#handleRegister" text="등록" />
-        <Button fx:id="BackButton" mnemonicParsing="false" onAction="#handleBack" text="이전" />
-        <Label fx:id="messageLabel" style="-fx-text-fill: red;" text="" />
+                <TextField fx:id="bizNumberField" promptText="사업자등록번호" styleClass="input" />
+                <TextField fx:id="companyNameField" promptText="상호명" styleClass="input" />
+                <TextField fx:id="ceoNameField" promptText="대표자명" styleClass="input" />
+                <TextField fx:id="ceoPhoneField" promptText="대표자 연락처" styleClass="input" />
+                <TextField fx:id="emailField" promptText="이메일 (ID)" styleClass="input" />
+
+                <HBox alignment="CENTER" spacing="12">
+                    <Button fx:id="BackButton" text="이전" onAction="#handleBack" styleClass="button-secondary" />
+                    <Button fx:id="registerButton" text="등록" onAction="#handleRegister" styleClass="button-primary" />
+                </HBox>
+
+                <Label fx:id="messageLabel" text="" styleClass="label-error" />
+            </children>
+        </VBox>
     </children>
-</VBox>
+</AnchorPane>
